--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ active: projects
                 <div class="column _100vh">
                     <div class="project-info">
                         <h2 class="project-title">Redesigning for accessibility</h2>
-                        <!--<p class="project-description">An app that just gets you.</p>-->
+                        <p class="project-description">UX Research, UX & UI Design</p>
                         <a href="projects/appdm.html" class="project-link">view project</a>
                     </div>
                 </div>
@@ -21,8 +21,19 @@ active: projects
                 <div class="column _100vh">
                     <div class="project-info">
                         <h2 class="project-title">Error Pages</h2>
-                        <p class="project-description">that reduce Customer Service time</p>
+                        <p class="project-description">Illustration, UI Design</p>
                         <a href="projects/404.html" class="project-link">view project</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="wrapper w-dyn-item nm">
+            <div style="background-image:url(img/doccy.jpg)" class="column background-image">
+                <div class="column _100vh">
+                    <div class="project-info">
+                        <h2 class="project-title">Creating the visual identity<br>of a chatbot</h2>
+                        <p class="project-description">Character Design, Visual Design</p>
+                        <a href="projects/doccy.html" class="project-link">view project</a>
                     </div>
                 </div>
             </div>
