--- a/projects/404.html
+++ b/projects/404.html
@@ -73,9 +73,9 @@ active: projects
 			<div class="w-dyn-item">
 				<a href="appdm.html" class="big-link">Redesigning for accessibility</a>
 			</div>
-			<!--<div class="w-dyn-item">
-				<a href="/work/looking-for-life-beyond-earth-2" class="big-link">project</a>
-			</div>-->
+			<div class="w-dyn-item">
+				<a href="doccy.html" class="big-link">Creating the visual identity of a chatbot</a>
+			</div>
 		</div>
 	</div>
 </div>
