--- a/projects/appdm.html
+++ b/projects/appdm.html
@@ -9,7 +9,7 @@ active: projects
 		<div class="_w-h1">
 			<h1 class="main-h1">Redesigning<br>for accessibility</h1>
 			<div class="div-block-18">
-				<p class="paragraph-2"><strong>Client: </strong>doccle</br><strong>Location: </strong>Leuven, Belgium</br><strong>Date: </strong>December 2019 - February 2020</p>
+				<p class="paragraph-2"><strong>Client: </strong>Doccle</br><strong>Location: </strong>Leuven, Belgium</br><strong>Date: </strong>December 2019 - February 2020</p>
 			</div>
 		</div>
 	</div>
@@ -137,9 +137,9 @@ active: projects
 			<div class="w-dyn-item">
 				<a href="404.html" class="big-link">Error Pages</a>
 			</div>
-			<!--<div class="w-dyn-item">
-				<a href="/work/looking-for-life-beyond-earth-2" class="big-link">project</a>
-			</div>-->
+			<div class="w-dyn-item">
+				<a href="doccy.html" class="big-link">Creating the visual identity of a chatbot</a>
+			</div>
 		</div>
 	</div>
 </div>
