Doccy article published in Spanish
Added link of the Spanish version of the article after published by Planeta Chatbot

--- a/projects/doccy.html
+++ b/projects/doccy.html
@@ -69,7 +69,7 @@ active: projects
 			<h2 class="main-h2">Outcomes & Lessons learned</h2>
 			<p>When releasing Doccy to the public we found that announcing Doccy on our platform and social media some weeks in advance really helped on its acceptance by the younger public. For the more conservative Docclers what really helped was keeping the option to “send a ticket to a human” on the first line in the beginning. We slowly shifted down that option more and more until it’s no longer visible. But still possible depending on the type of question.<br><br>Doccy revelled itself by being a great ambassador for the Doccle brand. People engage more on social media posts where Doccy is part of the visuals. And on the product side, for example, when Doccy announces maintenance or technical issues our “angry” tickets are softer now and there’s a small decrease in amount.<br><br>Doccy was a really fun project to work on and I’m really happy with the results.</p>
 			<h4> Extras</h4>
-			<p><a href="https://doccle.be/en/blog/doccy/">Read more about our dear Doccy on our blog.</a><br><br><a href="https://doccle.be/en/blog/doccy/">I also wrote a Medium article about this, in case you're interested.</a></p>
+			<p><a href="https://doccle.be/en/blog/doccy/">Read more about our dear Doccy on our blog.</a><br><br><a href="https://doccle.be/en/blog/doccy/">I also wrote a Medium article about this, in case you're interested.</a><br><a href="https://planetachatbot.com/como-crear-identidad-visual-chatbot-7ffb6b4e1935">The article was also published in Spanish,</a> on the publication <a href="https://planetachatbot.com/">Planeta Chatbot : todo sobre los Chat bots, Voice apps e Inteligencia Artificial.</a></p>
 		</div>
 	</div>
 </div>
