Added Beverage Club project
Added to playground page

--- a/playground/tobias.html
+++ b/playground/tobias.html
@@ -63,6 +63,9 @@ active: playground
 			<div class="w-dyn-item">
 				<a href="baf.html" class="big-link">O Rapaz e o Peixe</a>
 			</div>
+			<div class="w-dyn-item">
+				<a href="beveragestickers.html" class="big-link">Beverage Club - stickers</a>
+			</div>
 		</div>
 	</div>
 </div>
