--- a/playground/baf.html
+++ b/playground/baf.html
@@ -40,6 +40,9 @@ active: playground
 			<div class="w-dyn-item">
 				<a href="barcainferno.html" class="big-link">O Auto da Barca do Inferno</a>
 			</div>
+			<div class="w-dyn-item">
+				<a href="beveragestickers.html" class="big-link">Beverage Club - stickers</a>
+			</div>
 		</div>
 	</div>
 </div>
