--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@ active: projects
             <div style="background-image:url(img/doccy.jpg)" class="column background-image">
                 <div class="column _100vh">
                     <div class="project-info">
+                        <h2 class="project-title">é este</h2>
+                        <p class="project-description">Character Design, Visual Design</p>
+                        <a href="projects/login.html" class="project-link">view project</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="wrapper w-dyn-item nm">
+            <div style="background-image:url(img/doccy.jpg)" class="column background-image">
+                <div class="column _100vh">
+                    <div class="project-info">
                         <h2 class="project-title">Creating the visual identity<br>of a chatbot</h2>
                         <p class="project-description">Character Design, Visual Design</p>
                         <a href="projects/doccy.html" class="project-link">view project</a>
