--- a/playground/beveragestickers.html
+++ b/playground/beveragestickers.html
@@ -18,8 +18,8 @@ active: playground
 			<br>
 			<figure class="w-richtext-align-center" style="max-width: 60%;" data-rt-type="image" data-rt-align="center" data-rt-max-width="">
 				<div>
-					<img src="../img/playg/bc/01.png" alt="several photos that give a general overview of the process">
-					<h5>overview of the process</h5>
+					<img src="../img/playg/bc/01.png" alt="some beverage stickers showing up on a yellow background and in the middle is written: Beverage Club">
+					<h5>Beverage Club stickers</h5>
 				</div>
 			</figure>
 			<p>Just a side project for fun 🤓<br>I wrote an <a href="https://verasans.medium.com/creating-your-own-sticker-pack-whatsapp-and-gboard-9c5cb002257f" target="_blank">article on Medium</a> where I share my learnings, resources and some tips from my experience creating my own sticker packs for WhatsApp and Gboard. If you're interested go over there and take a look.<br><br>My stickers are available on the <a href="https://play.google.com/store/apps/details?id=com.verasans.wastickers" target="_blank">Google Play Store</a> for WhatsApp and Gboard and available on Sticker.ly, (<a href="http://sticker.ly/s/4L2RHW" target="_blank">Beverage Club</a> and <a href="http://sticker.ly/s/KGCICT" target="_blank">Beverage Club Winter Edition</a>) for iOS and Android fans.</p>
