--- a/projects/appdm.html
+++ b/projects/appdm.html
@@ -126,7 +126,7 @@ active: projects
 				</div>
 			</figure>
 			<h2 class="main-h2">Outcomes & Lessons learned</h2>
-			<p>Analysis is in the oven, the results are yet to come.</p>
+			<p>I’m really happy with the result so far. I believe that accessibility just makes an app better for everyone and should be something that you do from the beginning.<br><br>We have been received some good feedback. But the analysis is still in the oven, so the results are yet to come.</p>
 		</div>
 	</div>
 </div>
