--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@ active: projects
             </div>
         </div>
         <div class="wrapper w-dyn-item nm">
-            <div style="background-image:url(img/doccy.jpg)" class="column background-image">
+            <div style="background-image:url(img/login.png)" class="column background-image">
                 <div class="column _100vh">
                     <div class="project-info">
-                        <h2 class="project-title">é este</h2>
-                        <p class="project-description">Character Design, Visual Design</p>
+                        <h2 class="project-title">Log in & Registration</h2>
+                        <p class="project-description">UX & UI Design</p>
                         <a href="projects/login.html" class="project-link">view project</a>
                     </div>
                 </div>
