--- a/projects/404.html
+++ b/projects/404.html
@@ -74,6 +74,9 @@ active: projects
 				<a href="appdm.html" class="big-link">Redesigning for accessibility</a>
 			</div>
 			<div class="w-dyn-item">
+				<a href="login.html" class="big-link">Log in & Registration - a Case Study</a>
+			</div>
+			<div class="w-dyn-item">
 				<a href="doccy.html" class="big-link">Creating the visual identity of a chatbot</a>
 			</div>
 		</div>
