--- a/projects/login.html
+++ b/projects/login.html
@@ -7,15 +7,15 @@ active: projects
 <div class="main-section">
 	<div class="_w-title">
 		<div class="_w-h1">
-			<h1 class="main-h1">Redesigning<br>for accessibility</h1>
+			<h1 class="main-h1">Log in & Registration<br>a Case Study</h1>
 			<div class="div-block-18">
-				<p class="paragraph-2"><strong>Client: </strong>Doccle</br><strong>Location: </strong>Leuven, Belgium</br><strong>Date: </strong>December 2019 - February 2020</p>
+				<p class="paragraph-2"><strong>Client: </strong>Doccle</br><strong>Location: </strong>Leuven, Belgium</br><strong>Date: </strong>2019 - 2020</p>
 			</div>
 		</div>
 	</div>
-			<div class="column background-image">
-				<img src="../img/.png" alt="This is the hero image. Occupies the entire width of the page and contains a compilation of a lot of the final screens for this project, light and dark mode. There’s three horizontal lines of screens that are rotated 45° to the right.">
-			</div>
+			<!--<div class="column background-image">
+				<img src="../img/login/hero.jpg" alt="hero img">
+			</div>-->
 	<div class="proj_body-wrap">
 		<div class="proj_body w-richtext">
 			<h2 class="main-h2">Overview</h2>
@@ -60,15 +60,15 @@ active: projects
 			<p>Here the biggest change was the flow.<br>This is how it looked like before:</p>
 			<figure class="w-richtext-align-center" style="max-width: 60%;" data-rt-type="image" data-rt-align="center" data-rt-max-width="">
 				<div>
-					<img src="../img/login/02.png" alt="Two screens, side by side, from the previous doccle app design. On the first one, you can see that the top bar is a dropdown and on the second you see the dropdown opened with all the options visible. Home, New, To handle and Archive.">
-					<h5>Previous top bar design for the Documents screen</h5>
+					<img src="../img/login/02.png" alt="quick digital sketch showing the previous 2 step flow">
+					<h5>it lookes straight forward...</h5>
 				</div>
 			</figure>
 			<p>And this is how it ended up to be:</p>
 			<figure class="w-richtext-align-center" style="max-width: 60%;" data-rt-type="image" data-rt-align="center" data-rt-max-width="">
 				<div>
-					<img src="../img/.png" alt="Two screens, side by side, from the previous doccle app design. On the first one, you can see that the top bar is a dropdown and on the second you see the dropdown opened with all the options visible. Home, New, To handle and Archive.">
-					<h5>Previous top bar design for the Documents screen</h5>
+					<img src="../img/login/03.png" alt="quick digital sketch showing the new flow">
+					<h5>looks too complex, but it's not 🙂</h5>
 				</div>
 			</figure>
 			<p>What we did was separate the flow into steps, each step then becoming a separate screen, this allows us to make validations along the way that prevent double accounts.</p>
@@ -77,6 +77,12 @@ active: projects
 			<br>
 			<h4>What did we solve?</h4>
 			<p>With this, we solved the double accounts created by accident. Now even if our Docclers only visit the platform sporadically we are able to guide them in a better way and our Customer Support Team has less work to identify their questions.</p>
+			<figure class="w-richtext-align-center" style="max-width: 60%;" data-rt-type="image" data-rt-align="center" data-rt-max-width="">
+				<div>
+					<img src="../img/login/04.png" alt="3 mobile screens showing some steps of the Account Creation flow">
+					<h5>some steps from the Account Creation flow</h5>
+				</div>
+			</figure>
 			<h2 class="main-h2">Outcomes & Lessons learned</h2>
 			<p>These changes went live on the 2nd of November, 2020. By the 24th we added to the roadmap a hotfix to the login page.</p>
 			<h4>What went wrong?</h4>
@@ -89,10 +95,13 @@ active: projects
 	<div class="w-dyn-list">
 		<div class="w-dyn-items">
 			<div class="w-dyn-item">
-				<a href="404.html" class="big-link">Error Pages</a>
+				<a href="appdm.html" class="big-link">Redesigning for accessibility</a>
 			</div>
 			<div class="w-dyn-item">
 				<a href="doccy.html" class="big-link">Creating the visual identity of a chatbot</a>
+			</div>
+			<div class="w-dyn-item">
+				<a href="404.html" class="big-link">Error Pages</a>
 			</div>
 		</div>
 	</div>
