--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ active: projects
                 <div class="column _100vh">
                     <div class="project-info">
                         <h2 class="project-title">Creating the visual identity<br>of a chatbot</h2>
-                        <p class="project-description">Character Design, Visual Design</p>
+                        <p class="project-description">UX Research, Character Design, Visual Design</p>
                         <a href="projects/doccy.html" class="project-link">view project</a>
                     </div>
                 </div>
@@ -42,8 +42,8 @@ active: projects
             <div style="background-image:url(img/vex404.png)" class="column background-image">
                 <div class="column _100vh">
                     <div class="project-info">
-                        <h2 class="project-title">Error Pages</h2>
-                        <p class="project-description">Illustration, UI Design</p>
+                        <h2 class="project-title">Error Pages that reduce CS time</h2>
+                        <p class="project-description">UX Research, Illustration, UI Design</p>
                         <a href="projects/404.html" class="project-link">view project</a>
                     </div>
                 </div>
