--- a/projects/404.html
+++ b/projects/404.html
@@ -10,7 +10,7 @@ active: projects
 			<h1 class="main-h1">Error Pages</h1>
 			<h2 class="main-h2" style="margin-top: 0px;">that reduce Customer Service time</h2>
 			<div class="div-block-18">
-				<p class="paragraph-2"><strong>Client: </strong>Vente-Exclusive</br><strong>Location: </strong>Brussels, Belgium</br><strong>Date: </strong>2018</p>
+				<p class="paragraph-2">UX Research, Illustration, UI Design</br><strong>Client: </strong>Vente-Exclusive</br><strong>Location: </strong>Brussels, Belgium</br><strong>Date: </strong>2018</p>
 			</div>
 		</div>
 	</div>
