--- a/projects/doccy.html
+++ b/projects/doccy.html
@@ -9,7 +9,7 @@ active: projects
 		<div class="_w-h1">
 			<h1 class="main-h1">Creating the visual identity<br>of a chatbot</h1>
 			<div class="div-block-18">
-				<p class="paragraph-2"><strong>Client: </strong>Doccle</br><strong>Location: </strong>Leuven, Belgium</br><strong>Date: </strong>December 2018 - February 2019</p>
+				<p class="paragraph-2">UX Research, Characer Design, Visual Design</br><strong>Client: </strong>Doccle</br><strong>Location: </strong>Leuven, Belgium</br><strong>Date: </strong>December 2018 - February 2019</p>
 			</div>
 		</div>
 	</div>
