--- a/projects/login.html
+++ b/projects/login.html
@@ -9,7 +9,7 @@ active: projects
 		<div class="_w-h1">
 			<h1 class="main-h1">Log in & Registration<br>a Case Study</h1>
 			<div class="div-block-18">
-				<p class="paragraph-2"><strong>Client: </strong>Doccle</br><strong>Location: </strong>Leuven, Belgium</br><strong>Date: </strong>2019 - 2020</p>
+				<p class="paragraph-2">UX & UI Design</br><strong>Client: </strong>Doccle</br><strong>Location: </strong>Leuven, Belgium</br><strong>Date: </strong>2019 - 2020</p>
 			</div>
 		</div>
 	</div>
