--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@ active: projects
                 <div class="column _100vh">
                     <div class="project-info">
                         <h2 class="project-title">Redesigning for accessibility</h2>
-                        <p class="project-description">UX Research, UX & UI Design</p>
+                        <p class="project-description">An accessible-first approach to a re-design & usage of native components for each OS, helped us increase our ratings on Google App Store and App Store.</p>
+                        <p class="project-description" style="font-size: 14px; color: #767676; font-weight: bold;">UX Research, UX & UI Design</p>
                         <a href="projects/appdm.html" class="project-link">view project</a>
                     </div>
                 </div>
@@ -21,7 +22,8 @@ active: projects
                 <div class="column _100vh">
                     <div class="project-info">
                         <h2 class="project-title">Log in & Registration</h2>
-                        <p class="project-description">UX & UI Design</p>
+                        <p class="project-description">We learned the hard way to listen to the happy silent Dooclers when fixing features for the, in this case, minority unhappy ones.</p>
+                        <p class="project-description" style="font-size: 14px; color: #767676; font-weight: bold;">UX & UI Design</p>
                         <a href="projects/login.html" class="project-link">view project</a>
                     </div>
                 </div>
@@ -32,7 +34,8 @@ active: projects
                 <div class="column _100vh">
                     <div class="project-info">
                         <h2 class="project-title">Creating the visual identity<br>of a chatbot</h2>
-                        <p class="project-description">UX Research, Character Design, Visual Design</p>
+                        <p class="project-description">From name to persona, to tone of voice and visual. A project where we explored all the angles and possibilities to create an engaging and trustworthy chatbot to people from 18 to 65+.</p>
+                        <p class="project-description" style="font-size: 14px; color: #767676; font-weight: bold;">UX Research, Character Design, Visual Design</p>
                         <a href="projects/doccy.html" class="project-link">view project</a>
                     </div>
                 </div>
@@ -43,7 +46,8 @@ active: projects
                 <div class="column _100vh">
                     <div class="project-info">
                         <h2 class="project-title">Error Pages that reduce CS time</h2>
-                        <p class="project-description">UX Research, Illustration, UI Design</p>
+                        <p class="project-description">Creation of fun engaging characters and activities to reduce stress and switch the focus from the errors and amplify business opportunities.<br>Due to a major restructuring in the parent company, this project was never launched.</p>
+                        <p class="project-description" style="font-size: 14px; color: #767676; font-weight: bold;">UX Research, Illustration, UI Design</p>
                         <a href="projects/404.html" class="project-link">view project</a>
                     </div>
                 </div>
