--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </div>
 
       <a href="https://www.figma.com/deck/TPV2N6DGnv1ZytAy0dL0tk/Apiax" class="case-image" target="_blank">
-        <img src="images/apiax.png" alt="AI Policy Assistant" />
+        <img src="img/apiax.png" alt="AI Policy Assistant" />
       </a>
     </section>
 
@@ -69,7 +69,7 @@
       </div>
 
       <a href="https://www.figma.com/deck/rO8HaeiBiQPS4pZ8JL6rZy/Duracell" class="case-image" target="_blank">
-        <img src="images/duracell.png" alt="Duracell case study" />
+        <img src="img/duracell.png" alt="Duracell case study" />
       </a>
     </section>
 
@@ -89,7 +89,7 @@
       </div>
 
       <a href="https://www.figma.com/deck/zmiI4HqbDfXSOrSk5t2Igr/LaundryRun" class="case-image" target="_blank">
-        <img src="images/laundryrun.png" alt="LaundryRun case study" />
+        <img src="img/laundryrun.png" alt="LaundryRun case study" />
       </a>
     </section>
 
@@ -111,7 +111,7 @@
       </div>
 
       <a href="https://www.figma.com/deck/yiWIDnDo4nk8T5KsXkCdVq/HejPark" class="case-image" target="_blank">
-        <img src="images/hejpark.png" alt="HejPark case study" />
+        <img src="img/hejpark.png" alt="HejPark case study" />
       </a>
     </section>
 
