--- a/about.html
+++ b/about.html
@@ -8,6 +8,12 @@
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Open+Sans:wght@300;600&display=swap" rel="stylesheet">
 
+  <!-- Favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="img/fav/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/fav/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/fav/favicon-16x16.png">
+  <link rel="manifest" href="img/fav/site.webmanifest">
+  
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
