--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
         </p>
       </div>
 
-      <!-- <a href="https://www.figma.com/deck/TPV2N6DGnv1ZytAy0dL0tk/Apiax" class="case-image" target="_blank">
+      <a href="https://www.figma.com/deck/TPV2N6DGnv1ZytAy0dL0tk/Apiax" class="case-image" target="_blank">
         <img src="img/apiax.png" alt="AI Policy Assistant" />
-      </a> -->
-      <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/slides/TPV2N6DGnv1ZytAy0dL0tk/Apiax?node-id=1-848&embed-host=share" allowfullscreen></iframe>
-    </section>
+      </a>
+      <!-- <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/slides/TPV2N6DGnv1ZytAy0dL0tk/Apiax?node-id=1-848&embed-host=share" allowfullscreen></iframe>
+    </section>  -->
 
     <hr />
 
@@ -102,10 +102,10 @@
         </p>
       </div>
 
-      <!-- <a href="https://www.figma.com/deck/rO8HaeiBiQPS4pZ8JL6rZy/Duracell" class="case-image" target="_blank">
+      <a href="https://www.figma.com/deck/rO8HaeiBiQPS4pZ8JL6rZy/Duracell" class="case-image" target="_blank">
       <img src="img/duracell.png" alt="Duracell case study">
-      </a> -->
-      <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/slides/rO8HaeiBiQPS4pZ8JL6rZy/Duracell?node-id=1-848&embed-host=share" allowfullscreen></iframe>
+      </a>
+      <!-- <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/slides/rO8HaeiBiQPS4pZ8JL6rZy/Duracell?node-id=1-848&embed-host=share" allowfullscreen></iframe>  -->
     </section>
 
     <hr />
@@ -116,17 +116,17 @@
         <h2>LaundryRun<br>
         <span>Business Case</span></h2>
         <p>
-          LaundryRun is a digital service focused on modernizing laundry pickup and delivery. As <b>Lead Product Designer</b>, I partnered with the LaundryRun team to evolve the concept into a fully defined product strategy and design system.
+          LaundryRun is a digital service focused on modernising laundry pickup and delivery. As <b>Lead Product Designer</b>, I partnered with the LaundryRun team to evolve the concept into a fully defined product strategy and design system.
         </p>
         <p>
           I <b>led end-to-end product design</b>, including <b>user research, interaction design, service design, and iteration in Agile delivery, reducing booking friction by approximately 20–30%</b>, supporting repeat usage through subscriptions, and improving operational coordination between customers and service partners.
         </p>
       </div>
 
-      <!-- <a href="https://www.figma.com/deck/zmiI4HqbDfXSOrSk5t2Igr/LaundryRun" class="case-image" target="_blank">
+      <a href="https://www.figma.com/deck/zmiI4HqbDfXSOrSk5t2Igr/LaundryRun" class="case-image" target="_blank">
         <img src="img/laundryrun.png" alt="LaundryRun case study" />
-      </a> -->
-      <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/slides/zmiI4HqbDfXSOrSk5t2Igr/LaundryRun?node-id=1-848&embed-host=share" allowfullscreen></iframe>
+      </a>
+      <!-- <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/slides/zmiI4HqbDfXSOrSk5t2Igr/LaundryRun?node-id=1-848&embed-host=share" allowfullscreen></iframe>  -->
     </section>
 
     <hr />
@@ -144,10 +144,10 @@
         </p>
       </div>
 
-      <!-- <a href="https://www.figma.com/deck/yiWIDnDo4nk8T5KsXkCdVq/HejPark" class="case-image" target="_blank">
+      <a href="https://www.figma.com/deck/yiWIDnDo4nk8T5KsXkCdVq/HejPark" class="case-image" target="_blank">
         <img src="img/hejpark.png" alt="HejPark case study" />
-      </a> -->
-      <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/slides/yiWIDnDo4nk8T5KsXkCdVq/HejPark?node-id=1-848&embed-host=share" allowfullscreen></iframe>
+      </a>
+      <!-- <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/slides/yiWIDnDo4nk8T5KsXkCdVq/HejPark?node-id=1-848&embed-host=share" allowfullscreen></iframe>  -->
     </section>
 
     <hr />
