--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
       <a href="https://www.figma.com/deck/TPV2N6DGnv1ZytAy0dL0tk/Apiax" class="case-image" target="_blank">
         <img src="img/apiax.png" alt="AI Policy Assistant" />
       </a>
-      <!-- <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/slides/TPV2N6DGnv1ZytAy0dL0tk/Apiax?node-id=1-848&embed-host=share" allowfullscreen></iframe>
-    </section>  -->
+      <!-- <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/slides/TPV2N6DGnv1ZytAy0dL0tk/Apiax?node-id=1-848&embed-host=share" allowfullscreen></iframe>  -->
+    </section>
 
     <hr />
 
