--- a/about.html
+++ b/about.html
@@ -69,13 +69,13 @@
           <div class="about-label about-me">
             <h2>Vera Martins</h2>
             <p>
-              I’m a Senior Product Designer with <b>13 years of experience</b> shaping digital products across <b>startups, scale-ups, and multinational companies</b>. I turn complex prospanlems into clear, user-centred experiences that align product strategy, business goals, and technical feasibility.
+              I’m a Senior Product Designer with <b>13 years' experience </b>shaping digital products across <b>startups, scale-ups, and multinational companies</b>. I turn complex problems into clear, user-centred experiences that align product strategy, business goals, and technical feasibility.
             </p>
             <p>
-              I work as a strategic partner within <b>cross-functional teams</b>, bringing clarity to ambiguous challenges while staying hands-on across UX, interaction design, and <b>design systems</b>.
+              As a strategic partner within <b>cross-functional teams</b>, I bring clarity to ambiguous challenges while maintaining a hands-on approach to UX, interaction design, and <b>design systems</b>.
             </p>
             <p>
-              I’ve delivered measurable impact in both large and small organisations — from improving conversion for companies like <b><a href="https://www.nokia.com/" target="_blank">Nokia</a></b> and <b>Duracell</b>, to <b>scaling products</b> such as <b><a href="https://doccle.be/en-be/" target="_blank">Doccle</a></b> to <b>2M+ users</b> and <b>reducing booking friction by 20–30%</b> for early-stage products like <b><a href="https://www.laundryrun.co/" target="_blank">LaundryRun</a></b>.
+              I have delivered measurable impact in both large and small organisations — from improving conversion rates for companies such as <b><a href="https://www.nokia.com/" target="_blank">Nokia</a></b> and <b>Duracell</b>, to <b>scaling products</b> like <b><a href="https://doccle.be/en-be/" target="_blank">Doccle</a></b> to <b>2M+ users</b> and <b>reducing booking friction by 20–30%</b> for early-stage products such as <b><a href="https://www.laundryrun.co/" target="_blank">LaundryRun</a></b>.
             </p>
           </div>
 
@@ -106,7 +106,7 @@
                 <li>Design Leadership</li>
                 <li>Cross-Functional Collaboration</li>
                 <li>Business & Service Design</li>
-                <li>Monetization Strategy</li>
+                <li>Monetisation Strategy</li>
                 <li>Design Operations</li>
               </ul>
             </div>
