--- a/index.html
+++ b/index.html
@@ -159,17 +159,17 @@
 
     <div class="footer-left">
       <ul class="footer-icons">
-        <li>◯</li>
-        <li>✺</li>
+        <li>&#9676;</li>
+        <li>&#10042;</li>
       </ul>
     </div>
 
     <div class="footer-right">
       <ul class="footer-links">
-        <li><a href="#">Instagram</a></li>
-        <li><a href="#">Behance</a></li>
-        <li><a href="#">Spotify</a></li>
-        <li><a href="#">LinkedIn</a></li>
+        <li><a href="https://www.instagram.com/verasans/" target="_blank">Photography</a></li>
+        <li><a href="https://www.instagram.com/sansartjournal/" target="_blank">Scribbles</a></li>
+        <li><a href="https://medium.com/@VeraSans" target="_blank">Medium</a></li>
+        <li><a href="https://www.linkedin.com/in/verasans/" target="_blank">LinkedIn</a></li>
       </ul>
     </div>
 
